Refactor ProductService and modify exception handling
Refactor ProductService to remove unused services and simplify handling of prices and counts in product responses. Enhance exception messaging in SupplyServiceImpl to give more precise information about the user's access rights. The changes aim to streamline the codebase and improve error responses for better client-facing communication.